cleaning file first runthrough complete

--- a/src/cleaning.ipynb
+++ b/src/cleaning.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "amateur-surge",
+   "id": "american-christopher",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,10 +25,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "declared-mailman",
+   "id": "running-oasis",
    "metadata": {},
    "source": [
-    "#### Note:\n",
+    "#### Programming Note:\n",
     "- I prefer to encapsulate everything within a function rather than have variables within just the notebook.\n",
     "- While I understand that this takes away from some of the perks of the sandbox environment of Jupyter Notebooks, I feel that maintaining the scope of data/variables in this way prevents issues further down the road, such as\n",
     "    - conflicting variables/variable names,\n",
@@ -38,9 +38,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bulgarian-sculpture",
+   "metadata": {},
+   "source": [
+    "#### Data Note\n",
+    "- I have chosen to undo some of the cleaning I perform in my webscraping package in order to demonstrate some common cleaning examples\n",
+    "- By doing this, I can simulate likely requirements when dealing with unfamiliar/third-party data sources, such as eliminating null values and cleaning up columns/rows"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "outer-order",
+   "id": "written-conclusion",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "international-verification",
+   "id": "instant-colors",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bearing-blond",
+   "id": "selective-virus",
    "metadata": {},
    "source": [
     "### Get basic overview"
@@ -74,20 +84,18 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "nuclear-technical",
+   "id": "mexican-driving",
    "metadata": {},
    "outputs": [],
    "source": [
     "def data_overview():\n",
-    "    return (load_raw()\n",
-    "            .info()\n",
-    "           )"
+    "    return load_raw().info()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "minute-lightweight",
+   "id": "collectible-politics",
    "metadata": {},
    "outputs": [
     {
@@ -95,60 +103,60 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 28448 entries, 0 to 28447\n",
+      "RangeIndex: 28968 entries, 0 to 28967\n",
       "Data columns (total 48 columns):\n",
       " #   Column    Non-Null Count  Dtype  \n",
       "---  ------    --------------  -----  \n",
-      " 0   Date      28448 non-null  object \n",
-      " 1   Name      28436 non-null  object \n",
-      " 2   Team      28448 non-null  object \n",
-      " 3   Opp       28448 non-null  object \n",
-      " 4   FPTS      28448 non-null  float64\n",
-      " 5   MP        28448 non-null  float64\n",
-      " 6   FPTS/MP   28448 non-null  float64\n",
-      " 7   Home      28448 non-null  int64  \n",
-      " 8   W         28448 non-null  object \n",
-      " 9   W_PTS     28448 non-null  int64  \n",
-      " 10  L         28448 non-null  object \n",
-      " 11  L_PTS     28448 non-null  int64  \n",
-      " 12  Injury    28448 non-null  int64  \n",
-      " 13  Starter   28448 non-null  int64  \n",
-      " 14  FG        28448 non-null  float64\n",
-      " 15  FGA       28448 non-null  float64\n",
-      " 16  FG_perc   28448 non-null  float64\n",
-      " 17  3P        28448 non-null  float64\n",
-      " 18  3PA       28448 non-null  float64\n",
-      " 19  3P_perc   28448 non-null  float64\n",
-      " 20  FT        28448 non-null  float64\n",
-      " 21  FTA       28448 non-null  float64\n",
-      " 22  FT_perc   28448 non-null  float64\n",
-      " 23  ORB       28448 non-null  float64\n",
-      " 24  DRB       28448 non-null  float64\n",
-      " 25  TRB       28448 non-null  float64\n",
-      " 26  AST       28448 non-null  float64\n",
-      " 27  STL       28448 non-null  float64\n",
-      " 28  BLK       28448 non-null  float64\n",
-      " 29  TOV       28448 non-null  float64\n",
-      " 30  PF        28448 non-null  float64\n",
-      " 31  PTS       28448 non-null  float64\n",
-      " 32  +/-       28448 non-null  float64\n",
-      " 33  TS_perc   28448 non-null  float64\n",
-      " 34  eFG_perc  28448 non-null  float64\n",
-      " 35  3PAr      28448 non-null  float64\n",
-      " 36  FTr       28448 non-null  float64\n",
-      " 37  ORB_perc  28448 non-null  float64\n",
-      " 38  DRB_perc  28448 non-null  float64\n",
-      " 39  TRB_perc  28448 non-null  float64\n",
-      " 40  AST_perc  28448 non-null  float64\n",
-      " 41  STL_perc  28448 non-null  float64\n",
-      " 42  BLK_perc  28448 non-null  float64\n",
-      " 43  TOV_perc  28448 non-null  float64\n",
-      " 44  USG_perc  28448 non-null  float64\n",
-      " 45  ORtg      28448 non-null  float64\n",
-      " 46  DRtg      28448 non-null  float64\n",
-      " 47  BPM       28448 non-null  float64\n",
+      " 0   Date      28968 non-null  object \n",
+      " 1   Name      28956 non-null  object \n",
+      " 2   Team      28968 non-null  object \n",
+      " 3   Opp       28968 non-null  object \n",
+      " 4   FPTS      28968 non-null  float64\n",
+      " 5   MP        28968 non-null  float64\n",
+      " 6   FPTS/MP   28968 non-null  float64\n",
+      " 7   Home      28968 non-null  int64  \n",
+      " 8   W         28968 non-null  object \n",
+      " 9   W_PTS     28968 non-null  int64  \n",
+      " 10  L         28968 non-null  object \n",
+      " 11  L_PTS     28968 non-null  int64  \n",
+      " 12  Injury    28968 non-null  int64  \n",
+      " 13  Starter   28968 non-null  int64  \n",
+      " 14  FG        28968 non-null  float64\n",
+      " 15  FGA       28968 non-null  float64\n",
+      " 16  FG_perc   28968 non-null  float64\n",
+      " 17  3P        28968 non-null  float64\n",
+      " 18  3PA       28968 non-null  float64\n",
+      " 19  3P_perc   28968 non-null  float64\n",
+      " 20  FT        28968 non-null  float64\n",
+      " 21  FTA       28968 non-null  float64\n",
+      " 22  FT_perc   28968 non-null  float64\n",
+      " 23  ORB       28968 non-null  float64\n",
+      " 24  DRB       28968 non-null  float64\n",
+      " 25  TRB       28968 non-null  float64\n",
+      " 26  AST       28968 non-null  float64\n",
+      " 27  STL       28968 non-null  float64\n",
+      " 28  BLK       28968 non-null  float64\n",
+      " 29  TOV       28968 non-null  float64\n",
+      " 30  PF        28968 non-null  float64\n",
+      " 31  PTS       28968 non-null  float64\n",
+      " 32  +/-       28968 non-null  float64\n",
+      " 33  TS_perc   28968 non-null  float64\n",
+      " 34  eFG_perc  28968 non-null  float64\n",
+      " 35  3PAr      28968 non-null  float64\n",
+      " 36  FTr       28968 non-null  float64\n",
+      " 37  ORB_perc  28968 non-null  float64\n",
+      " 38  DRB_perc  28968 non-null  float64\n",
+      " 39  TRB_perc  28968 non-null  float64\n",
+      " 40  AST_perc  28968 non-null  float64\n",
+      " 41  STL_perc  28968 non-null  float64\n",
+      " 42  BLK_perc  28968 non-null  float64\n",
+      " 43  TOV_perc  28968 non-null  float64\n",
+      " 44  USG_perc  28968 non-null  float64\n",
+      " 45  ORtg      28968 non-null  float64\n",
+      " 46  DRtg      28968 non-null  float64\n",
+      " 47  BPM       28968 non-null  float64\n",
       "dtypes: float64(37), int64(5), object(6)\n",
-      "memory usage: 10.4+ MB\n"
+      "memory usage: 10.6+ MB\n"
      ]
     }
    ],
@@ -158,10 +166,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "experimental-harvard",
+   "id": "technical-match",
    "metadata": {},
    "source": [
-    "**As one can see, there are 48 columns and 28448 rows. Since I scraped this data myself, there should not be very many missing values, except on the rare occassion the scraper adds a blank space for a name after injuries and then fills the stats as if they were a player who DNP that game**\n",
+    "**Since I scraped this data myself, there should not be very many missing values, except on the rare occassion the scraper adds a blank space for a name after injuries and then fills the stats as if they were a player who DNP that game**\n",
     "</br>\n",
     "</br>\n",
     "Therefore, I know I need to drop these rows from the dataset. I will write a basic function to check if there are missing data or not."
@@ -170,12 +178,12 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "resident-button",
+   "id": "biblical-horse",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def no_missing(df) -> bool:\n",
-    "    return df.dropna().shape == df.shape\n",
+    "def contains_missing_data(df) -> bool:\n",
+    "    return df.dropna().shape != df.shape\n",
     "    \n",
     "#     return f'{\"No missing values anywhere\" if not is_missing_values(df) else \"Data is missing some values, need to fix\"}'"
    ]
@@ -183,13 +191,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "thirty-leonard",
+   "id": "objective-calgary",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
      "execution_count": 7,
@@ -198,24 +206,24 @@
     }
    ],
    "source": [
-    "no_missing( load_raw() )"
+    "contains_missing_data( load_raw() )"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "former-application",
+   "id": "skilled-tulsa",
    "metadata": {},
    "source": [
     "#### clean_data():\n",
     " - load the raw data \n",
-    " - do some basic cleaning, including dropping rows with missing values\n",
+    " - do some basic cleaning, as described by comments within chain of pandas operations\n",
     " - save as a new file 'season-data-clean.csv' to se for the rest of the time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "collectible-sherman",
+   "execution_count": 11,
+   "id": "forced-direction",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,17 +233,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "sustained-particular",
+   "execution_count": 118,
+   "id": "restricted-forest",
    "metadata": {},
    "outputs": [],
    "source": [
     "def clean_data() -> None:\n",
     "    \n",
-    "    df: pd.DataFrame = (load_raw()\n",
-    "                        .pipe(lambda df_: df_.loc[df_.isna().any(axis=1) == False])\n",
-    "                       )\n",
+    "#     Columns must be renamed before using this\n",
+    "#     Positive integers lt 255\n",
+    "    uint_cols: tuple[int,...] = (\n",
+    "        'home',\n",
+    "        'starter',\n",
+    "        'injury',\n",
+    "        'w_pts',\n",
+    "        'l_pts',\n",
+    "        'fg',\n",
+    "        'fga',\n",
+    "        '3p',\n",
+    "        '3pa',\n",
+    "        'ft',\n",
+    "        'fta',\n",
+    "        'pts',\n",
+    "        'ast',\n",
+    "        'orb',\n",
+    "        'drb',\n",
+    "        'trb',\n",
+    "        'stl',\n",
+    "        'blk',\n",
+    "        'tov',\n",
+    "        'pf'\n",
+    "    )\n",
     "        \n",
+    "    rename_cols: dict[str,str] = {\n",
+    "        'FPTS/MP': 'fppm',\n",
+    "        '+/-': 'plus_minus',\n",
+    "#         usage, effective field goal, and true shooting percentages dont have any similar stats, unlike field goal and field goal percentage\n",
+    "#             can trim the '_perc' part off just these\n",
+    "        'USG_perc': 'usg',\n",
+    "        'TS_perc': 'ts',\n",
+    "    }\n",
+    "        \n",
+    "    print(load_raw().columns)\n",
+    "    \n",
+    "    df: pd.DataFrame = (load_raw()\n",
+    "#                         Get rid of rows containing null values\n",
+    "                        .pipe( lambda df_: df_.loc[df_.isna().any(axis=1) == False] )\n",
+    "#                         Rename certain columns directly so that they can be typed in df.col_name manner\n",
+    "#                         and to avoid problems with subsequent step.\n",
+    "                        .rename( rename_cols, axis=1 )\n",
+    "#                         Convert all columns to lowercase, trim any possible blank spaces, and convert - to _\n",
+    "                        .rename( columns=lambda col_name: col_name.lower().replace(' ', '').replace('-','_') )\n",
+    "#                         Create new columns and correct types such that they are in optimal form\n",
+    "#                             new columns: total_pts, pts_diff\n",
+    "#                             uint8 --> integer column values < 255\n",
+    "                        .assign(\n",
+    "                            total_pts=lambda df_: df_.w_pts+df_.l_pts,\n",
+    "                            # will need to correct for winners/losers\n",
+    "                            pts_diff=lambda df_: df_.w_pts-df_.l_pts,\n",
+    "                            **{c:lambda df_, c=c:df_[c].astype('uint8') for c in uint_cols},\n",
+    "                               )\n",
+    "#                         Get rid of all inactive players rows\n",
+    "                        .pipe(lambda df_: df_.loc[df_['mp'] > 0.0])\n",
+    "                       )\n",
+    "    \n",
+    "#     Correct the pts_diff column to account for if team lost by that much (cannot use conditional within assign command)\n",
+    "    df.loc[df['team'] != df['w'], 'pts_diff'] *= -1\n",
+    "    \n",
     "    df.to_csv(clean_data_path(), index=False)\n",
     "    \n",
     "    return"
@@ -243,8 +307,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "miniature-process",
+   "execution_count": 119,
+   "id": "atlantic-strain",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,20 +317,119 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "social-preservation",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['Date', 'Name', 'Team', 'Opp', 'FPTS', 'MP', 'FPTS/MP', 'Home', 'W',\n",
+      "       'W_PTS', 'L', 'L_PTS', 'Injury', 'Starter', 'FG', 'FGA', 'FG_perc',\n",
+      "       '3P', '3PA', '3P_perc', 'FT', 'FTA', 'FT_perc', 'ORB', 'DRB', 'TRB',\n",
+      "       'AST', 'STL', 'BLK', 'TOV', 'PF', 'PTS', '+/-', 'TS_perc', 'eFG_perc',\n",
+      "       '3PAr', 'FTr', 'ORB_perc', 'DRB_perc', 'TRB_perc', 'AST_perc',\n",
+      "       'STL_perc', 'BLK_perc', 'TOV_perc', 'USG_perc', 'ORtg', 'DRtg', 'BPM'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "clean_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "id": "adapted-passion",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 18362 entries, 0 to 18361\n",
+      "Data columns (total 50 columns):\n",
+      " #   Column      Non-Null Count  Dtype  \n",
+      "---  ------      --------------  -----  \n",
+      " 0   date        18362 non-null  object \n",
+      " 1   name        18362 non-null  object \n",
+      " 2   team        18362 non-null  object \n",
+      " 3   opp         18362 non-null  object \n",
+      " 4   fpts        18362 non-null  float64\n",
+      " 5   mp          18362 non-null  float64\n",
+      " 6   fppm        18362 non-null  float64\n",
+      " 7   home        18362 non-null  int64  \n",
+      " 8   w           18362 non-null  object \n",
+      " 9   w_pts       18362 non-null  int64  \n",
+      " 10  l           18362 non-null  object \n",
+      " 11  l_pts       18362 non-null  int64  \n",
+      " 12  injury      18362 non-null  int64  \n",
+      " 13  starter     18362 non-null  int64  \n",
+      " 14  fg          18362 non-null  int64  \n",
+      " 15  fga         18362 non-null  int64  \n",
+      " 16  fg_perc     18362 non-null  float64\n",
+      " 17  3p          18362 non-null  int64  \n",
+      " 18  3pa         18362 non-null  int64  \n",
+      " 19  3p_perc     18362 non-null  float64\n",
+      " 20  ft          18362 non-null  int64  \n",
+      " 21  fta         18362 non-null  int64  \n",
+      " 22  ft_perc     18362 non-null  float64\n",
+      " 23  orb         18362 non-null  int64  \n",
+      " 24  drb         18362 non-null  int64  \n",
+      " 25  trb         18362 non-null  int64  \n",
+      " 26  ast         18362 non-null  int64  \n",
+      " 27  stl         18362 non-null  int64  \n",
+      " 28  blk         18362 non-null  int64  \n",
+      " 29  tov         18362 non-null  int64  \n",
+      " 30  pf          18362 non-null  int64  \n",
+      " 31  pts         18362 non-null  int64  \n",
+      " 32  plus_minus  18362 non-null  float64\n",
+      " 33  ts_perc     18362 non-null  float64\n",
+      " 34  efg_perc    18362 non-null  float64\n",
+      " 35  3par        18362 non-null  float64\n",
+      " 36  ftr         18362 non-null  float64\n",
+      " 37  orb_perc    18362 non-null  float64\n",
+      " 38  drb_perc    18362 non-null  float64\n",
+      " 39  trb_perc    18362 non-null  float64\n",
+      " 40  ast_perc    18362 non-null  float64\n",
+      " 41  stl_perc    18362 non-null  float64\n",
+      " 42  blk_perc    18362 non-null  float64\n",
+      " 43  tov_perc    18362 non-null  float64\n",
+      " 44  usg_perc    18362 non-null  float64\n",
+      " 45  ortg        18362 non-null  float64\n",
+      " 46  drtg        18362 non-null  float64\n",
+      " 47  bpm         18362 non-null  float64\n",
+      " 48  total_pts   18362 non-null  int64  \n",
+      " 49  pts_diff    18362 non-null  int64  \n",
+      "dtypes: float64(22), int64(22), object(6)\n",
+      "memory usage: 7.0+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "load_clean().info()"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "passive-investor",
+   "id": "boring-drawing",
    "metadata": {},
    "source": [
     "#### Final check that all cleaning tasks came out as desired\n",
     "- No missing values in any rows\n",
     "- Columns all lowercase and any special formatting taken care of\n",
-    "- Only specified columns for now"
+    "- Only specified columns for now\n",
+    "- Only active players"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "arranged-winning",
+   "execution_count": 108,
+   "id": "front-headset",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,16 +437,19 @@
     "#     asserts for all type of cleaning want to do\n",
     "    \n",
     "    clean_df: pd.DataFrame = load_clean()\n",
+    "        \n",
+    "    assert(not contains_missing_data(clean_df))\n",
+    "    assert(not len([char for char in ''.join(clean_df.columns) if char.isupper() or char== '-' ]))\n",
+    "    assert(not len(clean_df.loc[clean_df['mp'] == 0.0]))\n",
     "    \n",
-    "    assert(no_missing(clean_df))\n",
     "    \n",
     "    return"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "protective-primary",
+   "execution_count": 109,
+   "id": "complimentary-monster",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "affecting-kruger",
+   "id": "completed-entertainment",
    "metadata": {},
    "outputs": [],
    "source": []
