cleaning file first runthrough completesrc/cleaning.ipynb

--- a/src/cleaning.ipynb
+++ b/src/cleaning.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "american-christopher",
+   "id": "banned-trouble",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "running-oasis",
+   "id": "steady-olympus",
    "metadata": {},
    "source": [
     "#### Programming Note:\n",
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bulgarian-sculpture",
+   "id": "manual-mercury",
    "metadata": {},
    "source": [
     "#### Data Note\n",
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "written-conclusion",
+   "id": "revised-dominant",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "instant-colors",
+   "id": "according-france",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "selective-virus",
+   "id": "fuzzy-bikini",
    "metadata": {},
    "source": [
     "### Get basic overview"
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "mexican-driving",
+   "id": "experimental-columbia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "collectible-politics",
+   "id": "undefined-tuner",
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "technical-match",
+   "id": "excited-investing",
    "metadata": {},
    "source": [
     "**Since I scraped this data myself, there should not be very many missing values, except on the rare occassion the scraper adds a blank space for a name after injuries and then fills the stats as if they were a player who DNP that game**\n",
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "biblical-horse",
+   "id": "figured-feeding",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "objective-calgary",
+   "id": "variable-walker",
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "skilled-tulsa",
+   "id": "assisted-honey",
    "metadata": {},
    "source": [
     "#### clean_data():\n",
@@ -223,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "forced-direction",
+   "id": "rolled-comparative",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,8 +233,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
-   "id": "restricted-forest",
+   "execution_count": 121,
+   "id": "banned-affiliate",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,10 +271,9 @@
     "#         usage, effective field goal, and true shooting percentages dont have any similar stats, unlike field goal and field goal percentage\n",
     "#             can trim the '_perc' part off just these\n",
     "        'USG_perc': 'usg',\n",
+    "        'eFG_perc': 'efg',\n",
     "        'TS_perc': 'ts',\n",
     "    }\n",
-    "        \n",
-    "    print(load_raw().columns)\n",
     "    \n",
     "    df: pd.DataFrame = (load_raw()\n",
     "#                         Get rid of rows containing null values\n",
@@ -307,8 +306,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
-   "id": "atlantic-strain",
+   "execution_count": 122,
+   "id": "intensive-medicine",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,32 +317,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
-   "id": "social-preservation",
+   "execution_count": 123,
+   "id": "approved-subsection",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index(['Date', 'Name', 'Team', 'Opp', 'FPTS', 'MP', 'FPTS/MP', 'Home', 'W',\n",
-      "       'W_PTS', 'L', 'L_PTS', 'Injury', 'Starter', 'FG', 'FGA', 'FG_perc',\n",
-      "       '3P', '3PA', '3P_perc', 'FT', 'FTA', 'FT_perc', 'ORB', 'DRB', 'TRB',\n",
-      "       'AST', 'STL', 'BLK', 'TOV', 'PF', 'PTS', '+/-', 'TS_perc', 'eFG_perc',\n",
-      "       '3PAr', 'FTr', 'ORB_perc', 'DRB_perc', 'TRB_perc', 'AST_perc',\n",
-      "       'STL_perc', 'BLK_perc', 'TOV_perc', 'USG_perc', 'ORtg', 'DRtg', 'BPM'],\n",
-      "      dtype='object')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "clean_data()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
-   "id": "adapted-passion",
+   "execution_count": 124,
+   "id": "treated-minutes",
    "metadata": {},
    "outputs": [
     {
@@ -388,8 +373,8 @@
       " 30  pf          18362 non-null  int64  \n",
       " 31  pts         18362 non-null  int64  \n",
       " 32  plus_minus  18362 non-null  float64\n",
-      " 33  ts_perc     18362 non-null  float64\n",
-      " 34  efg_perc    18362 non-null  float64\n",
+      " 33  ts          18362 non-null  float64\n",
+      " 34  efg         18362 non-null  float64\n",
       " 35  3par        18362 non-null  float64\n",
       " 36  ftr         18362 non-null  float64\n",
       " 37  orb_perc    18362 non-null  float64\n",
@@ -399,7 +384,7 @@
       " 41  stl_perc    18362 non-null  float64\n",
       " 42  blk_perc    18362 non-null  float64\n",
       " 43  tov_perc    18362 non-null  float64\n",
-      " 44  usg_perc    18362 non-null  float64\n",
+      " 44  usg         18362 non-null  float64\n",
       " 45  ortg        18362 non-null  float64\n",
       " 46  drtg        18362 non-null  float64\n",
       " 47  bpm         18362 non-null  float64\n",
@@ -416,7 +401,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "boring-drawing",
+   "id": "proprietary-diamond",
    "metadata": {},
    "source": [
     "#### Final check that all cleaning tasks came out as desired\n",
@@ -428,8 +413,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
-   "id": "front-headset",
+   "execution_count": 125,
+   "id": "cardiovascular-dance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,8 +433,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
-   "id": "complimentary-monster",
+   "execution_count": 126,
+   "id": "skilled-reaction",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "completed-entertainment",
+   "id": "helpful-graphic",
    "metadata": {},
    "outputs": [],
    "source": []
