added heatmapping function and some annotations

--- a/src/cleaning.ipynb
+++ b/src/cleaning.ipynb
@@ -3,29 +3,18 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "banned-trouble",
+   "id": "rental-cutting",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "import time\n",
-    "\n",
-    "from tqdm.notebook import tqdm\n",
-    "# from sklearn.preprocessing import MinMaxScaler, StandardScaler\n",
-    "\n",
-    "import matplotlib.style as style\n",
-    "style.use('seaborn-colorblind')\n",
-    "\n",
-    "%matplotlib inline"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "steady-olympus",
+   "id": "conservative-supplier",
    "metadata": {},
    "source": [
     "#### Programming Note:\n",
@@ -39,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "manual-mercury",
+   "id": "younger-advantage",
    "metadata": {},
    "source": [
     "#### Data Note\n",
@@ -50,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "revised-dominant",
+   "id": "nominated-regression",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "according-france",
+   "id": "designing-spare",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fuzzy-bikini",
+   "id": "specialized-jonathan",
    "metadata": {},
    "source": [
     "### Get basic overview"
@@ -84,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "experimental-columbia",
+   "id": "widespread-monte",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "undefined-tuner",
+   "id": "hungarian-philadelphia",
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "excited-investing",
+   "id": "major-custom",
    "metadata": {},
    "source": [
     "**Since I scraped this data myself, there should not be very many missing values, except on the rare occassion the scraper adds a blank space for a name after injuries and then fills the stats as if they were a player who DNP that game**\n",
@@ -178,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "figured-feeding",
+   "id": "oriented-terrain",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "variable-walker",
+   "id": "opposite-issue",
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "assisted-honey",
+   "id": "charged-reggae",
    "metadata": {},
    "source": [
     "#### clean_data():\n",
@@ -223,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "rolled-comparative",
+   "id": "automated-constitution",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "banned-affiliate",
+   "id": "burning-insider",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "intensive-medicine",
+   "id": "handed-engine",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "approved-subsection",
+   "id": "unsigned-signature",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "treated-minutes",
+   "id": "original-continuity",
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +390,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "proprietary-diamond",
+   "id": "diverse-siemens",
    "metadata": {},
    "source": [
     "#### Final check that all cleaning tasks came out as desired\n",
@@ -414,7 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "cardiovascular-dance",
+   "id": "confident-jesus",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "skilled-reaction",
+   "id": "numerical-cycling",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "helpful-graphic",
+   "id": "spectacular-politics",
    "metadata": {},
    "outputs": [],
    "source": []
