added: second eda file, file_manager class

--- a/src/eda-heatmaps.ipynb
+++ b/src/eda-heatmaps.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "inappropriate-extreme",
+   "id": "adult-encyclopedia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,16 +26,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "composite-chemistry",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "id": "upper-nursing",
+   "id": "guided-vampire",
    "metadata": {},
    "source": [
     "#### Exploring feature relationships\n",
@@ -55,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "rubber-shade",
+   "id": "assured-unemployment",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "extensive-seminar",
+   "id": "seasonal-employee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,8 +90,7 @@
     "                       )\n",
     "        \n",
     "    if kwargs.get('product'):\n",
-    "        prod_cols: tuple[tuple[str,str],...] = tuple(itertools.combinations(kwargs['product'], 2))\n",
-    "        for cols in prod_cols:\n",
+    "        for cols in itertools.combinations(kwargs['product'], 2):\n",
     "            df['*'.join(cols)] = df[cols[0]]*df[cols[1]]\n",
     "    \n",
     "    print(f'Sample size: {df.shape[0]:,}\\n')\n",
@@ -127,8 +118,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "valued-brunei",
+   "execution_count": 12,
+   "id": "controlled-international",
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "registered-summit",
+   "id": "acute-weapon",
    "metadata": {},
    "source": [
     "- **As one can see, *pts* has the highest correlaion with fpts, which makes sense as NBA players with high fpts are more likely to have gotten relatively high points as compared to assists or rebounds, despite these two stats having higher multipliers. Therefore one can possibly conclude that scoring players might be better picks than rebound/assist players**\n",
@@ -173,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "colored-massage",
+   "id": "sharp-stephen",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "perceived-subsection",
+   "id": "grateful-monthly",
    "metadata": {},
    "source": [
     "-*Not much realtionship with* fpts *but a very strong correlation with* ts"
@@ -216,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "exceptional-inflation",
+   "id": "loving-concrete",
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "desperate-burning",
+   "id": "compressed-fitting",
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +273,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "civic-fundamental",
+   "id": "explicit-pencil",
    "metadata": {},
    "source": [
     "- *While it is not good practice to try and delve too deep into reasons why changes may occur without further investigating, one can still see that points and minutes played maintain a strong relationship while assists, rebounds, usg becomes weaker for players coming off the bench. Therefore if one is selecting nonstarters, one would see the best return on fpts if getting the primary scorer for bench players and/or nonstarters playing significant minutes, two factors most likely to be heavily intersected*\n",
@@ -293,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "disabled-provision",
+   "id": "brutal-thing",
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +322,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "pharmaceutical-exhibition",
+   "id": "worth-bristol",
    "metadata": {},
    "source": [
     "- **One can easily see now that usage becomes much better for predicting fpts when taking its product with minutes played rather than just usage alone**"
@@ -340,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "expired-portable",
+   "id": "behavioral-houston",
    "metadata": {},
    "outputs": [],
    "source": []
